version/0.14/_sources/api/solver/_autosummary/settings/sample_trajectories.rst.txt
:orphan:

.. _sample_trajectories:

sample_trajectories
===================

.. autoclass:: ansys.fluent.core.solver.settings_231.sample_trajectories.sample_trajectories

.. rubric:: Attributes

========================================================   ==============================================

Attribute                                                                                         Summary

========================================================   ==============================================
:ref:`user_defined_functions <user_defined_functions_1>`                 Set the DPM sampling output UDF.

:ref:`sort_sample_files <sort_sample_files>`                   Enable writing of sorted DPM sample files.

========================================================   ==============================================

.. rubric:: Methods

========================   =====================

Method                                   Summary

========================   =====================
:ref:`sample <sample_1>`       'sample' command.

========================   =====================

.. rubric:: Included in:

========================================   ===========================

Parent                                                         Summary

========================================   ===========================
:ref:`discrete_phase <discrete_phase_1>`       'discrete_phase' child.

========================================   ===========================

