version/0.19/_sources/api/solver/_autosummary/settings/sample_trajectories.rst.txt
:orphan:

.. _sample_trajectories:

sample_trajectories
===================

.. autoclass:: ansys.fluent.core.solver.settings_241.sample_trajectories.sample_trajectories
    :show-inheritance:

.. rubric:: Attributes

======================================================   ==============================================

Attribute                                                                                       Summary

======================================================   ==============================================
:ref:`user_defined_functions <user_defined_functions>`                 Set the DPM sampling output UDF.

:ref:`sort_sample_files <sort_sample_files>`                 Enable writing of sorted DPM sample files.

======================================================   ==============================================

.. rubric:: Methods

==========================================   ===============================

Method                                                               Summary

==========================================   ===============================
:ref:`compute <compute_3>`                                'compute' command.

:ref:`start_file_write <start_file_write>`       'start_file_write' command.

:ref:`stop_file_write <stop_file_write>`          'stop_file_write' command.

==========================================   ===============================

.. rubric:: Included in:

========================================   ===========================

Parent                                                         Summary

========================================   ===========================
:ref:`discrete_phase <discrete_phase_1>`       'discrete_phase' child.

========================================   ===========================

